--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,8 +1,8 @@
 $primary-color: #ffffff;
-$secondary-color: #ffd500;
+$secondary-color: #ff1fff;
 $tertiary-color: rgb(174, 88, 255);
 $color-separador: #a8b2ffba;
-$color-letra-titulo: #0070ff;
+$color-letra-titulo: #4d5fff;
 $link-hover-color: #7e31dd4f;
 $navbar-bg-color: rgba(138, 138, 138, 0.548);
 $btn-bg-color: #00000045;
@@ -38,18 +38,14 @@ $boton: (
 
 @mixin button-styles {
     font-family: 'Inter', sans-serif;
-    padding: 20px;
-    border-radius: 20px;
+    border-radius: 10px;
     text-decoration: none;
-    outline: 1px solid;
-    outline-color: #3669f747;
     transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1);
 
     &:hover {
-        box-shadow: inset 0 0 20px rgba(102, 49, 172, 0.5), 0 0 20px rgba(165, 9, 255, 0.644);
-        outline-color: rgba(49, 138, 172, 0);
-        outline-offset: 80px;
-        text-shadow: 1px 1px 6px #fff;
+        color: rgba(255, 255, 255, 1) !important;
+        transition: all 0.2s ease;
+        transform: translateY(-7px);
     }
 }
 
@@ -65,4 +61,3 @@ $boton: (
 
     }
 }
-
