--- a/css/estilos.css
+++ b/css/estilos.css
@@ -243,12 +243,12 @@ header nav {
 
 .varios ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  list-style: none; }
+  list-style: none;
+  margin: 0% auto; }
   .varios ul img {
-    width: 100px;
-    margin: 0% auto; }
+    width: 100px; }
 
 /** PAGE GALERIA **/
 .grid_galeria {
