--- a/css/estilos.css
+++ b/css/estilos.css
@@ -246,7 +246,8 @@ header nav {
   justify-content: space-evenly;
   align-items: center;
   list-style: none;
-  margin: 0% auto; }
+  margin: 0 auto;
+  padding-left: 0; }
   .varios ul img {
     width: 100px; }
 
