nosotros algunos cambios

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,6 +9,14 @@
   align-items: center; }
 
 /* MIXIN */
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
 /*! TIPOGRAFIA */
 /*! RESET */
 * {
@@ -279,19 +287,29 @@ header nav {
       border-radius: 100px; }
 
 /** PAGE NOSOTROS **/
+section .nosotros {
+  background: linear-gradient(-45deg, #fc1bfc, #000000, #931ca3, #000000);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100%; }
+
 .imagen-nosotros img {
   max-width: 100%;
   height: auto;
-  padding: 20px; }
+  padding: 20px;
+  border-radius: 70px; }
 
 .imagen-nosotros .parrafo {
-  color: #070707;
-  font-family: 'Inter', sans-serif;
+  color: #ffffff;
+  font-family: 'Rubik Mono One', sans-serif;
   text-align: left;
   flex-wrap: wrap;
   font-size: 20px; }
   .imagen-nosotros .parrafo p {
-    padding: 30px; }
+    padding: 30px;
+    background-color: #000000cb;
+    border-radius: 70px;
+    margin: 20px; }
 
 /** PAGE CONTACTO **/
 .contacto_css {
