--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -61,3 +61,17 @@ $boton: (
 
     }
 }
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
