--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -15,8 +15,8 @@ body {
         font-family: 'Rubik Mono One', sans-serif !important;
         font-size: 30px;
         padding: 2%;
-        color: $secondary-color;
-        border-radius: 50px;
+        color: $primary-color;
+        border-radius: 40px;
         margin: 0 auto;
         margin-bottom: 30px;
         margin-top: 10px;
